# ProjectTemplate-c-

./: .gitignore  .gitmodules  Banner.txt  CMakeLists.txt  README.md  build.sh  compile_commands.json  sonar-project.properties
cmake/: CodeCoverage.cmake  local.cmake  test.cmake
include/application/: Application.hpp  Banner.hpp  Version.hpp
include/sample_project/: Application.h  Banner.h  Version.h
resource/: Banner.txt  CMakeLists.txt
src/: Application.cpp  CMakeLists.txt  main.cpp
test/: applicationTest.cpp
